--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - FizzBuzz",
+            "request": "launch",
+            "mainClass": "FizzBuzz",
+            "projectName": "Coding_problems_91500a7b"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - Types",
             "request": "launch",
             "mainClass": "java.Types",
